Fix banner, header bar, about me alignment, portfolio alignment

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -17,7 +17,7 @@ body{
 }
 
 .wrapper{
-    width: 1100px;
+    width: 1200px;
     margin: 0 auto;
     position: relative;
 }
@@ -61,7 +61,7 @@ h5, h6          { font-weight: bolder }
 header{
   width: 100%;
   padding: 20px 0;
-  background-color: rgba(255,255,255,0.25);
+  background-color: #3e3d3d; /* rgba(255,255,255,0.25); */
   z-index: 3333;
 
 }
@@ -70,7 +70,7 @@ header.header_fixed{
     position: fixed;
     top: 0;
     left: 0;
-    background-color: #3e3d3d;
+    background-color: #3e3d3d; /* brown banner */
 
 }
 
@@ -81,7 +81,7 @@ header .clearfix a{
     text-decoration: none;
     float: right;
     width: 80px;
-    text-shadow: 0.5px 0.5px #003300;
+    text-shadow: 0.8px 0.8px #003300;
 }
 
 
@@ -95,9 +95,9 @@ header .clearfix a{
 /*  billboard  */
 .billboard{
     width: 100%;
-    max-width: 1920px;
     height: 650px;
-    background: url('../imgs/hero3.jpg') no-repeat;
+    background-image: url('../imgs/hero3.jpg');
+    background-repeat: repeat-x;
     background-position: cover;
     -webkit-background-position: cover;
     -moz-background-position: cover;
@@ -105,6 +105,7 @@ header .clearfix a{
     overflow: hidden;
     position: relative;
     z-index: 5555;
+
 }
 
 .billboard .caption h2{
@@ -140,8 +141,8 @@ header .clearfix a{
 }
 
 .about_icon{
-  margin-left: 40%;
-  display: inline;
+  margin-left: 30%;
+  display: inline-block;
 }
 
 .about_info{
@@ -149,9 +150,12 @@ header .clearfix a{
   margin-top: 0;
   padding-left: 30px;
   width: 500px;
+  
+  
 }
 
 .about_title{
+
     margin-bottom: 40px;
     color: #535353;
     font-family: "opensans-bold", arial;
@@ -163,14 +167,17 @@ header .clearfix a{
 
 .about article{
   display: inline-block;
+  width: 100%;
+
 
 }
 
-.about article p.about_desc{
+.about article .about_desc{
     color: #797878;
     font-family: "opensans-regular", arial;
     font-size: 14px;
     line-height: 28px;
+    width: 500px;
 }
 
 
@@ -292,13 +299,13 @@ header .clearfix a{
 
 .portfolio .folio_wrapper ul li{
     display: block;
-    width: 313px;
+    width: 350px;
     height: 310px;
     list-style: none;
     position: relative;
     float: left;
     overflow: hidden;
-    margin-right: 50px;
+    margin-left: 45px;
     margin-top: 50px;
 }
 
